--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "airtable": "^0.12.2",
+    "classnames": "^2.5.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
